--- a/151_200.md
+++ b/151_200.md
@@ -521,6 +521,261 @@ Why are the other answers wrong?
 <details>
   <summary>Question 164</summary>
 
+A company has two applications: a sender application that sends messages with payloads to be processed and a processing application intended to receive the messages with payloads. The company wants to implement an AWS service to handle messages between the two applications. The sender application can send about 1,000 messages each hour. The messages may take up to 2 days to be processed: If the messages fail to process, they must be retained so that they do not impact the processing of any remaining messages.
+
+Which solution meets these requirements and is the MOST operationally efficient?
+
+- [ ] A. Set up an Amazon EC2 instance running a Redis database. Configure both applications to use the instance. Store, process, and delete the messages, respectively.
+- [ ] B. Use an Amazon Kinesis data stream to receive the messages from the sender application. Integrate the processing application with the Kinesis Client Library (KCL).
+- [ ] C. Integrate the sender and processor applications with an Amazon Simple Queue Service (Amazon SQS) queue. Configure a dead-letter queue to collect the messages that failed to process.
+- [ ] D. Subscribe the processing application to an Amazon Simple Notification Service (Amazon SNS) topic to receive notifications to process. Integrate the sender application to write to the SNS topic.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Integrate the sender and processor applications with an Amazon Simple Queue Service (Amazon SQS) queue. Configure a dead-letter queue to collect the messages that failed to process.
+
+Why this is the correct answer:
+
+This solution uses Amazon SQS, which is well-suited for decoupling applications and handling asynchronous message processing with features for reliability.
+
+- [ ] Amazon SQS for Decoupled Messaging: Amazon Simple Queue Service (SQS) is a fully managed message queuing service that enables you to send, store, and receive messages between software components at any volume, without losing messages or requiring other services to be always available. This decouples the sender and processing applications.
+- [ ] Handles Long Processing Times: SQS messages can be retained in a queue for up to 14 days. The requirement that "messages may take up to 2 days to be processed" is well within this limit. The processing application can retrieve a message and use a visibility timeout to ensure it has enough time to process it before the message becomes visible again in the queue.
+- [ ] Dead-Letter Queue (DLQ) for Failed Messages: SQS supports the configuration of a dead-letter queue (DLQ). If the processing application fails to process a message successfully after a configurable number of attempts, SQS can automatically move the undeliverable message to the DLQ. This "retains" the failed messages for later investigation and reprocessing and ensures "they do not impact the processing of any remaining messages" in the main queue.
+- [ ] MOST Operationally Efficient: SQS is a fully managed service, requiring minimal operational overhead. Setting up a queue and a DLQ is straightforward. AWS handles the infrastructure, scalability, and availability of the queuing service.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Using a self-managed Redis database on an EC2 instance as a message queue introduces significant operational overhead. The company would be responsible for provisioning, managing, patching, and ensuring the availability of the EC2 instance and the Redis software. This is far less operationally efficient than using a managed service like SQS.
+- [ ] Option B is wrong because: Amazon Kinesis Data Streams is designed for ingesting and processing large volumes of real-time streaming data (often much higher than 1,000 messages per hour). While it offers durability (data records are typically retained for 24 hours by default, extendable up to 365 days), SQS is generally simpler and more cost-effective for traditional message queuing scenarios with individual message processing and built-in DLQ functionality. Handling retries and failed messages in Kinesis can be more complex for this use case.
+- [ ] Option D is wrong because: Amazon Simple Notification Service (SNS) is a publish/subscribe messaging service, primarily used for fanning out messages to multiple subscribers (e.g., sending notifications). It is not designed as a durable queue to hold messages for extended processing times (up to 2 days). If the processing application (subscriber) is unavailable, messages might be lost unless there's a durable endpoint like an SQS queue subscribed to the SNS topic. For direct decoupling between a sender and a single processing application (or a pool of workers for that application) with long processing times and error handling, SQS is more suitable.
+
+</details>
+
+<details>
+  <summary>Question 165</summary>
+
+A solutions architect must design a solution that uses Amazon CloudFront with an Amazon S3 origin to store a static website. The company's security policy requires that all website traffic be inspected by AWS WAF.
+
+How should the solutions architect comply with these requirements?
+
+- [ ] A. Configure an S3 bucket policy to accept requests coming from the AWS WAF Amazon Resource Name (ARN) only.
+- [ ] B. Configure Amazon CloudFront to forward all incoming requests to AWS WAF before requesting content from the S3 origin.
+- [ ] C. Configure a security group that allows Amazon CloudFront IP addresses to access Amazon S3 only. Associate AWS WAF to CloudFront.
+- [ ] D. Configure Amazon CloudFront and Amazon S3 to use an origin access identity (OAI) to restrict access to the S3 bucket. Enable AWS WAF on the distribution.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Configure Amazon CloudFront and Amazon S3 to use an origin access identity (OAI) to restrict access to the S3 bucket. Enable AWS WAF on the distribution.
+
+Why this is the correct answer:
+
+This solution addresses both securing the S3 origin and inspecting traffic with AWS WAF in the standard way:
+
+- [ ] Restricting Direct S3 Access with Origin Access Identity (OAI): To ensure that users access the static website content only through Amazon CloudFront and not directly from the S3 bucket URL, you use an Origin Access Identity (OAI). An OAI is a special CloudFront user that you associate with your distribution. You then update the S3 bucket policy to grant read permissions only to this OAI. This prevents public access to the S3 bucket.
+- [ ] Enabling AWS WAF on the CloudFront Distribution: AWS WAF (Web Application Firewall) integrates directly with Amazon CloudFront. You create a web ACL (Access Control List) in AWS WAF with your desired rules (e.g., to block common web exploits or filter traffic based on IP addresses, geographic location, etc.) and then associate this web ACL with your CloudFront distribution. This ensures that all website traffic passing through CloudFront is inspected by AWS WAF before it reaches the S3 origin or is served from the CloudFront cache.
+- [ ] This combination ensures that the S3 content is private and only accessible via CloudFront, and all traffic coming through CloudFront is inspected by AWS WAF.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: An S3 bucket policy cannot directly reference an AWS WAF ARN as a principal to grant access. AWS WAF inspects traffic at CloudFront (or other supported services like ALB, API Gateway); it doesn't act as a principal for S3 bucket policies in this manner.
+- [ ] Option B is wrong because: Amazon CloudFront does not "forward all incoming requests to AWS WAF" as a separate network hop. Instead, AWS WAF is integrated with CloudFront. When WAF is enabled on a CloudFront distribution, WAF inspects the requests as they arrive at the CloudFront edge locations, before CloudFront serves the content from cache or forwards the request to the origin.
+- [ ] Option C is wrong because:
+Amazon S3 buckets do not have security groups associated with them. Security groups are used for resources like EC2 instances within a VPC.
+Relying on whitelisting CloudFront IP addresses to restrict S3 access is not recommended because these IP ranges can change and are very broad. Using OAI (or the newer Origin Access Control - OAC) is the secure and standard method.
+While associating AWS WAF with CloudFront is correct, the S3 access control method described is flawed.
+
+</details>
+
+<details>
+  <summary>Question 166</summary>
+ 
+Organizers for a global event want to put daily reports online as static HTML pages. The pages are expected to generate millions of views from users around the world. The files are stored in an Amazon S3 bucket. A solutions architect has been asked to design an efficient and effective solution.
+
+Which action should the solutions architect take to accomplish this?
+
+- [ ] A. Generate presigned URLs for the files.
+- [ ] B. Use cross-Region replication to all Regions.
+- [ ] C. Use the geoproximity feature of Amazon Route 53.
+- [ ] D. Use Amazon CloudFront with the S3 bucket as its origin.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Use Amazon CloudFront with the S3 bucket as its origin.
+
+Why this is the correct answer:
+
+- [ ] Amazon S3 for Storing Static Content: Storing the static HTML pages in an Amazon S3 bucket is a scalable, durable, and cost-effective starting point.
+- [ ] Amazon CloudFront for Global Delivery and Performance: The key requirements are handling "millions of views from users around the world" and designing an "efficient and effective solution" (implying low latency and high availability). Amazon CloudFront is a global content delivery network (CDN). By configuring a CloudFront distribution with the S3 bucket as its origin, the static HTML pages will be cached at CloudFront's numerous edge locations worldwide. When users request a page, it will be served from the edge location closest to them, significantly reducing latency and improving the user experience. CloudFront can easily handle millions of requests.
+- [ ] Reduced Load on Origin: Caching content at the edge also reduces the number of direct requests to the S3 origin bucket, which can lower costs and further improve performance.
+- [ ] This is the standard and most effective architecture for delivering static web content globally with high performance and scalability on AWS.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Generating presigned URLs for S3 objects is primarily a mechanism for granting temporary, secure access to private objects in S3. It does not inherently improve performance or scalability for delivering public static content to millions of users globally. Users would still be fetching content directly from the S3 bucket's region, without the benefit of edge caching.
+- [ ] Option B is wrong because: While S3 Cross-Region Replication can replicate the S3 bucket content to other AWS Regions, placing data closer to some users, Amazon CloudFront provides a much more extensive network of edge locations (far more numerous and geographically distributed than AWS Regions). Using CloudFront is a more direct and generally more effective way to achieve low-latency global content delivery. Replicating to "all Regions" would also be operationally complex and costly.
+- [ ] Option C is wrong because: Amazon Route 53's geoproximity routing (or geolocation/latency-based routing) is a DNS feature that directs users to specific resources (like an S3 bucket endpoint or a load balancer) based on their geographic location or latency. However, if the content is only in a single S3 bucket, Route 53 alone cannot cache the content closer to users. It simply routes them to the origin. CloudFront (Option D) is needed for the actual edge caching and content delivery performance improvement.
+
+</details>
+
+<details>
+  <summary>Question 167</summary>
+
+- [ ] A.  Turn  
+A company runs a production application on a fleet of Amazon EC2 instances. The application reads the data from an Amazon SQS queue and processes the messages in parallel. The message volume is unpredictable and often has intermittent traffic. This application should continually process messages without any downtime.
+
+Which solution meets these requirements MOST cost-effectively?
+
+- [ ] A. Use Spot Instances exclusively to handle the maximum capacity required.
+- [ ] B. Use Reserved Instances exclusively to handle the maximum capacity required.
+- [ ] C. Use Reserved Instances for the baseline capacity and use Spot Instances to handle additional capacity.
+- [ ] D. Use Reserved Instances for the baseline capacity and use On-Demand Instances to handle additional capacity.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Use Reserved Instances for the baseline capacity and use On-Demand Instances to handle additional capacity.
+
+Why this is the correct answer:
+
+This solution balances cost-effectiveness with the critical requirement of continuous processing without downtime.
+
+- [ ] Reserved Instances (RIs) for Baseline Capacity: Even with unpredictable traffic, there's likely a minimum level of processing capacity that is consistently needed to ensure messages are being processed.
+- [ ] Using Reserved Instances for this baseline portion of the workload provides significant cost savings compared to On-Demand pricing for the compute capacity that is always active.
+- [ ] On-Demand Instances for Peak/Additional Capacity: For the "unpredictable and often intermittent traffic" that exceeds the baseline, On-Demand Instances provide the flexibility to scale up reliably.
+- [ ] Since the application "should continually process messages without any downtime," the guaranteed availability of On-Demand Instances (unlike Spot Instances, which can be interrupted) is crucial for handling these peaks without risking service interruption.
+- [ ] MOST Cost-Effective with High Availability: This combination is generally considered a robust and cost-effective strategy.
+- [ ] It provides cost savings for the predictable baseline while ensuring that capacity is always available via On-Demand instances to handle unpredictable peaks without the risk of interruptions that could lead to downtime for a critical message processing application.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: While Spot Instances are the most cost-effective in terms of instance pricing, they can be interrupted by AWS with a two-minute warning. For a production application that "should continually process messages without any downtime," relying exclusively on Spot Instances for all capacity (including what might be considered a baseline) is risky. If a large number of Spot Instances are reclaimed simultaneously, it could lead to a significant disruption in message processing.
+- [ ] Option B is wrong because: Purchasing Reserved Instances to handle the maximum potential capacity required for unpredictable and intermittent traffic would lead to substantial underutilization and wasted cost during periods of lower traffic. RIs are a commitment, and paying for peak capacity 24/7 when it's only needed sporadically is not cost-effective.
+- [ ] Option C is wrong because: This is a very strong cost optimization strategy and often recommended for fault-tolerant workloads. Using RIs for baseline and Spot Instances for peaks offers great savings. However, the requirement "This application should continually process messages without any downtime" is very stringent. Spot Instances can be interrupted. If such interruptions, even if managed by an Auto Scaling group, could lead to a backlog or a temporary inability to process messages at the required rate, it might be perceived as not meeting the "without any downtime" criteria as strictly as On-Demand instances would for the peak portion.
+- [ ] Option D prioritizes the availability of the peak capacity more than the absolute lowest cost for that peak portion. The community vote split in the PDF (D 58%, C 41%) indicates this is a common point of discussion where the interpretation of "without any downtime" is key.
+
+</details>
+
+<details>
+  <summary>Question 168</summary>
+
+A security team wants to limit access to specific services or actions in all of the team's AWS accounts. All accounts belong to a large organization in AWS Organizations. The solution must be scalable and there must be a single point where permissions can be maintained.
+
+What should a solutions architect do to accomplish this?
+
+- [ ] A. Create an ACL to provide access to the services or actions.
+- [ ] B. Create a security group to allow accounts and attach it to user groups.
+- [ ] C. Create cross-account roles in each account to deny access to the services or actions.
+- [ ] D. Create a service control policy in the root organizational unit to deny access to the services or actions.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Create a service control policy in the root organizational unit to deny access to the services or actions.
+
+Why this is the correct answer:
+
+- [ ] AWS Organizations and Service Control Policies (SCPs): The question states that all accounts belong to a large organization in AWS Organizations. Service Control Policies (SCPs) are a feature of AWS Organizations designed for centrally managing permissions across multiple AWS accounts. SCPs act as guardrails, allowing you to define the maximum permissions available for IAM users and roles within the member accounts.
+- [ ] Scalable and Single Point of Maintenance: SCPs can be attached to the organization root, an Organizational Unit (OU), or individual accounts. By attaching an SCP to the root OU (or a relevant OU containing all the accounts), the policy is enforced consistently across all those accounts. This provides a "scalable" solution where permissions can be "maintained" from a "single point" (the management account where SCPs are defined).
+- [ ] Limiting Access with Deny Statements: SCPs can be used to explicitly Deny access to specific AWS services or actions. This is a powerful way to enforce security boundaries and compliance requirements across the organization, ensuring that users and roles in member accounts cannot perform disallowed actions, even if their IAM policies would otherwise permit them.
+- [ ] This solution directly meets all the stated requirements by using the appropriate AWS Organizations feature for centralized, preventative permission management.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because:
+"ACL" is a general term. If it refers to Network ACLs (NACLs), these are stateless firewalls for controlling network traffic at the subnet level within a VPC and do not manage IAM permissions for AWS services or actions.
+If it refers to S3 Access Control Lists (ACLs), these are for managing access to S3 buckets and objects, not for broad control over AWS services and actions across accounts.
+Neither type of ACL provides a scalable, central point for maintaining permissions across all services and actions in multiple AWS accounts.
+- [ ] Option B is wrong because: Security groups act as stateful firewalls for resources like EC2 instances, controlling inbound and outbound network traffic. They do not manage IAM permissions for AWS services or actions, nor can you "allow accounts" or attach security groups to IAM user groups in the way described to control service access across an organization.
+- [ ] Option C is wrong because: Cross-account IAM roles are typically used to grant permissions, allowing users or services in one account to access resources in another account. While IAM policies attached to roles define permissions, creating roles in each account specifically to deny access is not the standard or most efficient method for centrally enforcing restrictions. SCPs (Option D) are designed for this preventative, organization-wide boundary setting. Managing deny logic through individual roles in every account would be operationally complex.
+
+</details>
+
+<details>
+  <summary>Question 169</summary>
+
+A company is concerned about the security of its public web application due to recent web attacks. The application uses an Application Load Balancer (ALB). A solutions architect must reduce the risk of DDoS attacks against the application.
+
+What should the solutions architect do to meet this requirement?
+
+- [ ] A. Add an Amazon Inspector agent to the ALB.
+- [ ] B. Configure Amazon Macie to prevent attacks.
+- [ ] C. Enable AWS Shield Advanced to prevent attacks.
+- [ ] D. Configure Amazon GuardDuty to monitor the ALB.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Enable AWS Shield Advanced to prevent attacks.
+
+Why this is the correct answer:
+
+- [ ] AWS Shield Advanced for DDoS Protection: AWS Shield is a managed Distributed Denial of Service (DDoS) protection service.
+- [ ] AWS Shield Advanced provides enhanced protections for applications running on AWS resources such as Application Load Balancers (ALBs), Amazon CloudFront distributions, Amazon Route 53, and EC2 instances.
+- [ ] It offers more comprehensive detection and mitigation capabilities against larger and more sophisticated DDoS attacks compared to AWS Shield Standard (which provides default protection).
+- [ ] Reduces Risk of DDoS Attacks: By enabling AWS Shield Advanced on the ALB, the company can significantly reduce the risk and impact of DDoS attacks.
+- [ ] Shield Advanced provides automatic inline mitigations for many common infrastructure (Layer 3 and 4) attacks and integrates with AWS WAF for application-layer (Layer 7) protection.
+- [ ] It also includes 24/7 access to the AWS DDoS Response Team (DRT) for assistance during attacks and cost protection against usage spikes resulting from DDoS attacks.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Amazon Inspector is a vulnerability management service that helps improve the security and compliance of applications deployed on Amazon EC2 instances by scanning for software vulnerabilities and unintended network exposure. It does not provide real-time protection against incoming DDoS attacks, nor are agents installed on ALBs (ALBs are managed services).
+- [ ] Option B is wrong because: Amazon Macie is a data security and data privacy service that uses machine learning and pattern matching to discover, classify, and protect sensitive data stored in Amazon S3. It is not designed to prevent or mitigate DDoS attacks against web applications or ALBs.
+- [ ] Option D is wrong because: Amazon GuardDuty is a threat detection service that continuously monitors for malicious activity and unauthorized behavior within your AWS environment by analyzing various data sources like VPC Flow Logs, AWS CloudTrail event logs, and DNS logs. While GuardDuty might detect indicators of a DDoS attack or compromised resources involved in an attack, it is primarily a detection and alerting service. It does not actively prevent or mitigate DDoS attacks in the way AWS Shield does.
+
+</details>
+
+<details>
+  <summary>Question 170</summary>
+ 
+A company's web application is running on Amazon EC2 instances behind an Application Load Balancer. The company recently changed its policy, which now requires the application to be accessed from one specific country only.
+
+Which configuration will meet this requirement?
+
+- [ ] A. Configure the security group for the EC2 instances.
+- [ ] B. Configure the security group on the Application Load Balancer.
+- [ ] C. Configure AWS WAF on the Application Load Balancer in a VPC.
+- [ ] D. Configure the network ACL for the subnet that contains the EC2 instances.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Configure AWS WAF on the Application Load Balancer in a VPC.
+
+Why this is the correct answer:
+
+- [ ] AWS WAF for Geographic Restriction: AWS WAF (Web Application Firewall) is a service that helps protect your web applications or APIs against common web exploits and bots. A key feature of AWS WAF is the ability to create rules based on the geographic origin of requests (geo match statements).
+- [ ] Filtering by Country: You can configure an AWS WAF web ACL with a geo match rule to explicitly allow requests originating only from the "one specific country" and block requests from all other countries.
+- [ ] Integration with Application Load Balancer (ALB): AWS WAF can be directly associated with an Application Load Balancer. When associated, WAF inspects all incoming web requests to the ALB and applies the defined rules (including the geo match rule) before traffic is forwarded to the backend EC2 instances.
+- [ ] This solution directly and effectively meets the requirement to restrict access to the application to users from a single specific country.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Security groups act as stateful firewalls at the instance level. While they can filter traffic based on IP addresses or CIDR ranges, maintaining an accurate and comprehensive list of all IP addresses for an entire country (or conversely, all IP addresses not in that country) within security group rules is impractical, difficult to manage, and would likely exceed rule limits. AWS WAF's geo match feature is designed for this purpose.
+- [ ] Option B is wrong because: Similar to option A, security groups associated with an Application Load Balancer are for controlling traffic to and from the load balancer itself based on IP addresses, ports, and protocols. They are not designed for sophisticated geographic-based filtering of application requests.
+- [ ] Option D is wrong because: Network ACLs (NACLs) are stateless firewalls that operate at the subnet level. Like security groups, they filter traffic based on IP addresses or CIDR ranges. Attempting to implement country-level blocking using NACLs would face the same difficulties as with security groups regarding the management of IP lists and rule limits. AWS WAF is the more appropriate and effective tool for geographic-based access control.
+
+</details>
+
+<details>
+  <summary>Question 171</summary>
+
 - [ ] A.  Turn  
 
 
@@ -533,19 +788,6 @@ Why are the other answers wrong?
 
 
 </details>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
