--- a/151_200.md
+++ b/151_200.md
@@ -776,21 +776,115 @@ Why are the other answers wrong?
 <details>
   <summary>Question 171</summary>
 
-- [ ] A.  Turn  
+A company provides an API to its users that automates inquiries for tax computations based on item prices. The company experiences a larger number of inquiries during the holiday season only that cause slower response times. A solutions architect needs to design a solution that is scalable and elastic.
 
+What should the solutions architect do to accomplish this?
+
+- [ ] A. Provide an API hosted on an Amazon EC2 instance. The EC2 instance performs the required computations when the API request is made.
+- [ ] B. Design a REST API using Amazon API Gateway that accepts the item names. API Gateway passes item names to AWS Lambda for tax computations.
+- [ ] C. Create an Application Load Balancer that has two Amazon EC2 instances behind it. The EC2 instances will compute the tax on the received item names.
+- [ ] D. Design a REST API using Amazon API Gateway that connects with an API hosted on an Amazon EC2 instance. API Gateway accepts and passes the item names to the EC2 instance for tax computations.
 
 </details>
 
 <details>
   <summary>Answer</summary>
 
-- [ ] A.  Turn
+- [ ] B. Design a REST API using Amazon API Gateway that accepts the item names. API Gateway passes item names to AWS Lambda for tax computations.
 
+Why this is the correct answer:
+
+This solution provides a serverless, highly scalable, and elastic architecture ideal for handling fluctuating loads like holiday season spikes:
+
+- [ ] Amazon API Gateway for Scalable API Frontend: Amazon API Gateway is a fully managed service that allows you to create, publish, maintain, monitor, and secure APIs at any scale. It can handle the "larger number of inquiries" and automatically scales to meet traffic demands.
+- [ ] AWS Lambda for Elastic and Scalable Compute: AWS Lambda is a serverless compute service that lets you run code without provisioning or managing servers. It executes your code only when needed and scales automatically, from a few requests per day to thousands per second. For the tax computations, Lambda can scale rapidly during the holiday season spikes and scale down to zero when demand is low, ensuring elasticity and cost-effectiveness.
+- [ ] Addresses Performance and Scalability: By using API Gateway to receive requests and Lambda to perform the computations, the solution can handle the increased load during peak times, thus preventing "slower response times." The serverless nature means the company doesn't need to pre-provision capacity for peak loads.
+- [ ] Minimized Operational Overhead: This is a fully managed, serverless solution, significantly reducing server maintenance and patching efforts.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: Hosting the API on a single Amazon EC2 instance (or even a manually scaled fleet) would require managing the instance(s), handling scaling manually or via more complex Auto Scaling configurations, and could still lead to slower response times if not scaled adequately for peak loads. This is not as inherently "scalable and elastic" with minimal operational overhead as a serverless solution.
+- [ ] Option C is wrong because: While an Application Load Balancer with two EC2 instances provides some load distribution and redundancy, it offers limited elasticity compared to Lambda. If the holiday spike exceeds the capacity of these two instances, performance will still degrade unless a more sophisticated Auto Scaling setup is implemented, which adds complexity. A serverless Lambda backend scales more seamlessly from zero to high demand.
+- [ ] Option D is wrong because: Using Amazon API Gateway as a frontend but then passing the requests to an API hosted on an Amazon EC2 instance means the EC2 instance remains the bottleneck for the actual computation. This doesn't fully leverage the scalability and elasticity benefits of serverless compute for the backend processing and still requires managing the EC2 instance. Option B (API Gateway to Lambda) provides a more complete serverless and elastic solution for the compute part.
 
 </details>
 
+<details>
+  <summary>Question 172</summary>
+  
+A solutions architect is creating a new Amazon CloudFront distribution for an application. Some of the information submitted by users is sensitive. The application uses HTTPS but needs another layer of security. The sensitive information should be protected throughout the entire application stack, and access to the information should be restricted to certain applications.
 
+Which action should the solutions architect take?
 
+- [ ] A. Configure a CloudFront signed URL.
+- [ ] B. Configure a CloudFront signed cookie.
+- [ ] C. Configure a CloudFront field-level encryption profile.
+- [ ] D. Configure CloudFront and set the Origin Protocol Policy setting to HTTPS Only for the Viewer Protocol Policy.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Configure a CloudFront field-level encryption profile.
+
+Why this is the correct answer:
+
+- [ ] CloudFront Field-Level Encryption: This feature of Amazon CloudFront allows you to selectively encrypt specific sensitive data fields in an HTTPS POST request at the CloudFront edge location, close to the user. The encryption uses a public key that you provide. The encrypted data is then forwarded to your origin server, and only specific applications at your origin that possess the corresponding private key can decrypt and view this sensitive information.
+- [ ] Protection Throughout the Stack: Because the sensitive data is encrypted at the edge and only decrypted by authorized backend applications, it remains protected as it passes through your application stack (e.g., load balancers, web servers, intermediate services) until it reaches the component with the decryption key. This addresses the "protected throughout the entire application stack" requirement.
+- [ ] Restricted Access to Certain Applications: By controlling which backend applications have access to the private key needed for decryption, you can restrict access to the sensitive information to only those authorized applications.
+- [ ] Another Layer of Security on top of HTTPS: The problem states the application already uses HTTPS (which encrypts the entire request in transit). Field-level encryption adds another layer by encrypting specific sensitive fields within that already encrypted HTTPS request, providing defense in depth.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: CloudFront signed URLs are used to control access to specific files or content served by CloudFront (e.g., private video files or software downloads). They are used to authorize who can access certain content and for how long, but they do not encrypt sensitive data submitted by users to the application.
+- [ ] Option B is wrong because: CloudFront signed cookies function similarly to signed URLs. They are used to control access to multiple restricted files or a broader set of private content, typically for users who have authenticated. Like signed URLs, they do not encrypt sensitive data submitted by users to the application.
+- [ ] Option D is wrong because:
+Setting the Viewer Protocol Policy to "HTTPS Only" ensures that users can only connect to CloudFront using HTTPS.
+Setting the Origin Protocol Policy to "HTTPS Only" ensures that CloudFront connects to your origin server using HTTPS.
+While these are essential security practices for ensuring end-to-end encryption of traffic in transit (and the question states "The application uses HTTPS"), they do not provide an additional layer of security for specific sensitive data fields within the already HTTPS-encrypted request. Field-level encryption (Option C) provides that specific additional layer for the data fields themselves.
+
+</details>
+
+<details>
+  <summary>Question 173</summary>
+
+- [ ] A.  Turn  
+A gaming company hosts a browser-based application on AWS. The users of the application consume a large number of videos and images that are stored in Amazon S3. This content is the same for all users.
+
+The application has increased in popularity, and millions of users worldwide accessing these media files. The company wants to provide the files to the users while reducing the load on the origin.
+
+Which solution meets these requirements MOST cost-effectively?
+
+- [ ] A. Deploy an AWS Global Accelerator accelerator in front of the web servers.
+- [ ] B. Deploy an Amazon CloudFront web distribution in front of the S3 bucket.
+- [ ] C. Deploy an Amazon ElastiCache for Redis instance in front of the web servers.
+- [ ] D. Deploy an Amazon ElastiCache for Memcached instance in front of the web servers.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Deploy an Amazon CloudFront web distribution in front of the S3 bucket.
+
+Why this is the correct answer:
+
+This scenario perfectly describes the primary use case for a Content Delivery Network (CDN).
+
+- [ ] Amazon S3 for Storing Media Files: Storing the videos and images in Amazon S3 is a scalable and durable solution for the origin content.
+- [ ] Amazon CloudFront for Caching and Global Delivery: Amazon CloudFront is AWS's global CDN. By deploying a CloudFront web distribution with the S3 bucket as its origin, the media files (which are "the same for all users," making them highly cacheable) will be cached at CloudFront's numerous edge locations around the world.
+- [ ] Reducing Load on Origin: When users request these files, they will be served from the CloudFront edge location closest to them if the content is cached there. This significantly "reduces the load on the origin" S3 bucket because CloudFront handles the bulk of the requests.
+- [ ] Improved Performance for Global Users: Serving content from edge locations drastically reduces latency for "millions of users worldwide," leading to faster load times and a better user experience.
+- [ ] MOST Cost-Effective: For delivering static content globally at scale, using CloudFront with an S3 origin is generally the most cost-effective solution. Data transfer from S3 to CloudFront is often free or at a reduced cost, and CloudFront's data transfer out pricing, combined with caching, can be more economical than users directly accessing S3 from all over the world.
+
+Why are the other answers wrong?
+
+- [ ] Option A is wrong because: AWS Global Accelerator is designed to improve the performance and availability of applications by routing traffic over the AWS global network to optimal regional application endpoints (like Application Load Balancers or EC2 instances). While it can reduce latency for reaching application endpoints, it is not primarily a content caching service. CloudFront (Option B) is specifically built for caching and delivering static and dynamic content from the edge, which is key for reducing origin load for static media files.
+- [ ] Option C is wrong because: Amazon ElastiCache for Redis is an in-memory caching service typically used to cache database query results, session states, or frequently accessed small pieces of data to accelerate application performance. It is not designed for caching and delivering large media files (videos and images) to millions of users worldwide in the way a CDN like CloudFront does.
+- [ ] Option D is wrong because: Similar to ElastiCache for Redis, Amazon ElastiCache for Memcached is an in-memory caching service. It is also not suited for the use case of caching and globally distributing large static media files. CloudFront is the appropriate service for edge caching and delivery of such content.
+
+</details>
 
 
 
